// Copyright Â© 2016 The Things Network
// Use of this source code is governed by the MIT license that can be found in the LICENSE file.

syntax = "proto3";

option go_package = "github.com/TheThingsNetwork/ttn/api/trace";

package trace;

// Trace information
message Trace {
  // Generated ID
  string id = 1;

  // Time in Unix nanoseconds
  int64 time = 2;

  // The ID of the component
  string service_id = 3;

  // The name of the component (router/broker/handler)
  string service_name = 4;

  // Short event name
  string event = 5;

  // metadata for the event
  map<string, string> metadata = 6;

  // Parents of the event
  repeated Trace parents = 11;
}
